# PGE

./: .gitignore  LICENSE.md  README.md
pge/: .gitignore  BlockGame-v0.py  CMakeLists.txt  CartPole-v0.py  CartPole3D-v0.py  Gym.py  Quadruped-v0.py  Quadruped3D-v0.py  SDRRL.py  Tennis-v0.py  Tennis3D-v0.py
pge/pypge/: BlockGameInterface.py  CartPole3DInterface.py  Quadruped3DInterface.py  Tennis3DInterface.py  __init__.py
pge/resources/environmentmaps/: Thumbs.db
pge/resources/environmentmaps/skybox1/: Thumbs.db
pge/resources/kernels/gi/: giKernel.cl
pge/resources/models/: BlockGame.mtl  Cart.mtl  CartPole.mtl  Pole.mtl  QuadrupedWorld.mtl  Sandbox.mtl  block.mtl  body.mtl  bot.mtl  limb1.mtl  skybox1.mtl  slime3D.mtl  surfTrack1.mtl  tennisBall.mtl  tennisCourt.mtl  tennisCourt2.mtl
pge/resources/shaders/: blurHorizontal.frag  blurHorizontalEdgeAware.frag  blurVertical.frag  blurVerticalEdgeAware.frag  defaultVertex.vert  depthRender.frag  noTransformFragment.frag  noTransformVertex.vert  positionOnlyFragment.frag  positionOnlyVertex.vert  renderImage.frag  renderImageMult.frag
pge/resources/shaders/custom/: trileRender.frag  trileRender.vert  trixelRender.frag  trixelRender.geom  trixelRender.vert
pge/resources/shaders/gbufferrender/: gBufferRender.frag  gBufferRenderBump.frag  gBufferRenderBump.vert  gBufferRenderParallax.frag
pge/resources/shaders/imageeffects/: depthOfFieldBlurHorizontal.frag  depthOfFieldBlurVertical.frag  fog.frag  fxaa.frag  gi.comp  lightScattering.frag  lumaRender.frag  ssao.frag  ssr.frag
pge/resources/shaders/light/: emissiveRender.frag
pge/resources/shaders/light/shadowed/: directionalShadowed.frag  point.frag
pge/resources/shaders/light/unshadowed/: directional.frag  point.frag  spot.frag
pge/resources/shaders/voxel/: depthRenderGrass.frag  depthRenderGrass.vert  gBufferRenderBumpVoxel.frag  gBufferRenderBumpVoxel.vert  gBufferRenderGrass.frag  gBufferRenderGrass.vert  gBufferRenderVoxelDepth.frag
pge/resources/textures/: Thumbs.db
pge/source/: Main.cpp  gl_core_3_3.c  gl_core_3_3.h  gl_core_4_4.c  gl_core_4_4.h
pge/source/pge/assetmanager/: Asset.h  AssetManager.cpp  AssetManager.h
pge/source/pge/bvh/: BVHNode.cpp  BVHNode.h  BVHTree.cpp  BVHTree.h
pge/source/pge/constructs/: AABB2D.cpp  AABB2D.h  AABB3D.cpp  AABB3D.h  Matrix3x3f.cpp  Matrix3x3f.h  Matrix4x4f.cpp  Matrix4x4f.h  PlaneEquationf.cpp  PlaneEquationf.h  Planef.cpp  Planef.h  Point2i.cpp  Point2i.h  Point3i.cpp  Point3i.h  Point4i.cpp  Point4i.h  Quaternion.cpp  Quaternion.h  Vec2f.cpp  Vec2f.h  Vec3f.cpp  Vec3f.h  Vec4f.cpp  Vec4f.h
pge/source/pge/geometry/: Form.h  FormTriangle.cpp  FormTriangle.h
pge/source/pge/physics/: BulletConversions.cpp  BulletConversions.h  DynamicCharacterController.cpp  DynamicCharacterController.h
pge/source/pge/rendering/: Camera.cpp  Camera.h  GBuffer.cpp  GBuffer.h  SFMLOGL.cpp  SFMLOGL.h
pge/source/pge/rendering/bufferobjects/: CubeMapDepthRT.cpp  CubeMapDepthRT.h  CubeMapRT.cpp  CubeMapRT.h  DepthRT.cpp  DepthRT.h  TextureRT.cpp  TextureRT.h  VBO.cpp  VBO.h
pge/source/pge/rendering/culling/: Frustum.cpp  Frustum.h
pge/source/pge/rendering/imageeffects/: SceneObjectDepthOfField.cpp  SceneObjectDepthOfField.h  SceneObjectEffectBuffer.cpp  SceneObjectEffectBuffer.h  SceneObjectFXAA.cpp  SceneObjectFXAA.h  SceneObjectFog.cpp  SceneObjectFog.h  SceneObjectLightScattering.cpp  SceneObjectLightScattering.h  SceneObjectSSAO.cpp  SceneObjectSSAO.h  SceneObjectSSR.cpp  SceneObjectSSR.h
pge/source/pge/rendering/lighting/: SceneObjectDirectionalLight.cpp  SceneObjectDirectionalLight.h  SceneObjectDirectionalLightShadowed.cpp  SceneObjectDirectionalLightShadowed.h  SceneObjectLighting.cpp  SceneObjectLighting.h  SceneObjectPointLight.cpp  SceneObjectPointLight.h  SceneObjectPointLightShadowed.cpp  SceneObjectPointLightShadowed.h  SceneObjectSpotLight.cpp  SceneObjectSpotLight.h
pge/source/pge/scene/: RenderScene.cpp  RenderScene.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SceneObjectRef.cpp  SceneObjectRef.h  State.cpp  State.h
pge/source/pge/sceneobjects/: SceneObjectBlockGame.cpp  SceneObjectBlockGame.h  SceneObjectBox.cpp  SceneObjectBox.h  SceneObjectCartPole.cpp  SceneObjectCartPole.h  SceneObjectEntryPoint.cpp  SceneObjectEntryPoint.h  SceneObjectEntryPointBlockGame.cpp  SceneObjectEntryPointBlockGame.h  SceneObjectEntryPointCartPole.cpp  SceneObjectEntryPointCartPole.h  SceneObjectEntryPointQuadruped.cpp  SceneObjectEntryPointQuadruped.h  SceneObjectEntryPointSurf.cpp  SceneObjectEntryPointSurf.h  SceneObjectEntryPointTennis.cpp  SceneObjectEntryPointTennis.h  SceneObjectFloatingCamera.cpp  SceneObjectFloatingCamera.h  SceneObjectOrbitCamera.cpp  SceneObjectOrbitCamera.h  SceneObjectPlayer.cpp  SceneObjectPlayer.h  SceneObjectProp.cpp  SceneObjectProp.h  SceneObjectPropLOD.cpp  SceneObjectPropLOD.h  SceneObjectQuadruped.cpp  SceneObjectQuadruped.h  SceneObjectSurf.cpp  SceneObjectSurf.h  SceneObjectSurfCharacterController.cpp  SceneObjectSurfCharacterController.h  SceneObjectTennis.cpp  SceneObjectTennis.h
pge/source/pge/system/: ParallelFor.h  SoftwareImage2D.h  ThreadPool.cpp  ThreadPool.h  Uncopyable.h
pge/source/pge/util/: Functions.cpp  Functions.h  Math.h  NoiseGenerator.cpp  NoiseGenerator.h
(+63 files in other folders)
